HELIO-4329 - style book bibliographic information panel data

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1868,6 +1868,13 @@ footer.press {
       float: right;
     }
 
+    dd.cozy-bib-info-value {
+      padding-bottom: 1em;
+    }
+
+    dd.cozy-bib-info-value-description {
+      font-size: .9em;
+    }
 
 .cozy-container i[class^='icon-'] {
     font-size: 2rem !important;
