HELIO-4343 PdeC toc links should go to the PdeC ereader

--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -2,6 +2,7 @@
   level = 0
   ebook_presenter = @presenter.epub? ? @presenter.epub_presenter : @presenter.pdf_ebook_presenter
   permit_download_buttons = EbookIntervalDownloadOperation.new(current_actor, Sighrax.from_solr_document(@presenter.reader_ebook)).allowed?
+  princess_de_cleves = @presenter.subdomain == 'leverpress' && (@presenter.isbn.any? { |isbn| isbn.delete("^0-9") == '9781643150383' })
 %>
   <% ebook_presenter.intervals.each_with_index do |interval, index| %>
     <% if interval.level > level %>
@@ -24,7 +25,7 @@
       <% if @presenter.tombstone? %>
         <span><%= interval.title %></span>
       <% else %>
-        <a class="toc-link" href="<%= epub_path(id: ebook_presenter.id) + '#' + interval.cfi  %>" data-turbolinks="false"><%= interval.title %></a>
+        <a class="toc-link" href="<%= (princess_de_cleves ? epub_ebook_path(@presenter.reader_ebook) : epub_path(id: ebook_presenter.id)) + '#' + interval.cfi  %>" data-turbolinks="false"><%= interval.title %></a>
         <% if interval.downloadable? && permit_download_buttons %>
           <div class="btn-group download" role="group" aria-label="Download Section">
             <a class="btn btn-default btn-sm toc-download-link" href="<%= epub_download_interval_path(id: ebook_presenter.id, title: interval.title, chapter_index: index) %>" data-turbolinks="false">
