--- a/app/views/epub_ebooks/show.html.erb
+++ b/app/views/epub_ebooks/show.html.erb
@@ -44,7 +44,7 @@
 
     <div class="nm--toolbar">
       <div id="action-close" class="cozy-control">
-        <a class="cozy-close cozy-control" href="<%= @back_link %>" title="Close reader and return to previous page" aria-label="Close reader">
+        <a class="cozy-close cozy-control" href="<%= @parent_presenter.catalog_url %>" title="Close reader and return to previous page" aria-label="Close reader">
           <i class="icon-x oi" data-glyph="x" aria-hidden="true"></i>
         </a>
       </div>
